--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@ h1{
    position: absolute;
    top: 9%;
    left: 2%;
-   color: #007bff;
+   color: #ffffff;
    background-color: #222;
    border-top-right-radius: 20px;
    border-bottom-right-radius: 20px;
@@ -80,6 +80,7 @@ h1{
     text-align: center;
    border-radius: 10px;
     border: 5px solid #007bff;;
+    background-color: #16375b;
     margin:10px;
     padding: 8px 30px;
     line-height: 1.5;} 
